[package]
name = "graveler"
version = "1.0.0"
edition = "2021"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "fast_rng"
harness = false
lto = "fat"

[[bin]]
harness = false
name = "graveler"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
rand = "0.8.5"
rayon = "1.10.0"
